Fix types in swagger responses
