# nestjs-backend/src/controller/assetprice.controller.ts
@@ -19,21 +19,12 @@ export class AssetPriceController {
       items: {
         example: [
           {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'AMGN',
-            company: 'Amgen',
-            sector: 'Biopharmaceutical',
-            todayClose: 245.67,
-            yesterdayClose: 244.98,
-            date: '2024-12-01T00:00:00.000Z',
-          },
-          {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'DOW',
-            company: 'Dow Chemical',
-            sector: 'Chemical',
-            todayClose: 56.45,
-            yesterdayClose: 55.78,
+            _id: 'string',
+            ticker: 'string',
+            company: 'string',
+            sector: 'string',
+            todayClose: 0,
+            yesterdayClose: 0,
             date: '2024-12-01T00:00:00.000Z',
           },
         ],
@@ -59,22 +50,22 @@ export class AssetPriceController {
       items: {
         example: [
           {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'AMGN',
-            company: 'Amgen',
-            sector: 'Biopharmaceutical',
-            todayClose: 245.67,
-            yesterdayClose: 244.98,
+            _id: 'string',
+            ticker: 'string',
+            company: 'string',
+            sector: 'string',
+            todayClose: 0,
+            yesterdayClose: 0,
             date: '2024-12-01T00:00:00.000Z',
           },
           {
-            _id: '638029d0a9a2344a8d56fdb',
-            ticker: 'AAPL',
-            company: 'Apple',
-            sector: 'Technology',
-            todayClose: 130.25,
-            yesterdayClose: 125.98,
-            date: '2024-12-01T00:00:00.000Z',
+            _id: 'string',
+            ticker: 'string',
+            company: 'string',
+            sector: 'string',
+            todayClose: 0,
+            yesterdayClose: 0,
+            date: '2024-12-02T00:00:00.000Z',
           },
         ],
       },
@@ -101,12 +92,12 @@ export class AssetPriceController {
     description: 'Asset price for a specific ticker and date',
     schema: {
       example: {
-        _id: '60f6c72e0a9a2344a8d56fdb',
-        ticker: 'AMGN',
-        company: 'Amgen',
-        sector: 'Biopharmaceutical',
-        todayClose: 245.67,
-        yesterdayClose: 244.98,
+        _id: 'string',
+        ticker: 'string',
+        company: 'string',
+        sector: 'string',
+        todayClose: 0,
+        yesterdayClose: 0,
         date: '2024-12-01T00:00:00.000Z',
       },
     },
@@ -140,12 +131,12 @@ export class AssetPriceController {
     description: 'Asset price successfully created',
     schema: {
       example: {
-        _id: '60f6c72e0a9a2344a8d56fdb',
-        ticker: 'MSFT',
-        company: 'Microsoft Corporation',
-        sector: 'Information Technology',
-        todayClose: 231.86000061035156,
-        yesterdayClose: 228.8699951171875,
+        _id: 'string',
+        ticker: 'string',
+        company: 'string',
+        sector: 'string',
+        todayClose: 0,
+        yesterdayClose: 0,
         date: '2024-12-01T00:00:00.000Z',
       },
     },
@@ -184,21 +175,12 @@ export class AssetPriceController {
       items: {
         example: [
           {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'AMGN',
-            company: 'Amgen',
-            sector: 'Biopharmaceutical',
-            todayClose: 245.67,
-            yesterdayClose: 244.98,
-            date: '2024-12-01T00:00:00.000Z',
-          },
-          {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'DOW',
-            company: 'Dow Chemical',
-            sector: 'Chemical',
-            todayClose: 56.45,
-            yesterdayClose: 55.78,
+            _id: 'string',
+            ticker: 'string',
+            company: 'string',
+            sector: 'string',
+            todayClose: 0,
+            yesterdayClose: 0,
             date: '2024-12-01T00:00:00.000Z',
           },
         ],
@@ -227,21 +209,12 @@ export class AssetPriceController {
       items: {
         example: [
           {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'AMGN',
-            company: 'Amgen',
-            sector: 'Biopharmaceutical',
-            todayClose: 245.67,
-            yesterdayClose: 244.98,
-            date: '2024-12-01T00:00:00.000Z',
-          },
-          {
-            _id: '60f6c72e0a9a2344a8d56fdb',
-            ticker: 'DOW',
-            company: 'Dow Chemical',
-            sector: 'Chemical',
-            todayClose: 56.45,
-            yesterdayClose: 55.78,
+            _id: 'string',
+            ticker: 'string',
+            company: 'string',
+            sector: 'string',
+            todayClose: 0,
+            yesterdayClose: 0,
             date: '2024-12-01T00:00:00.000Z',
           },
         ],
